# Aria

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
aria/: __init__.py  app.py  dialogue.py  director.py  persistence.py  video.py  world.py
web/: app.js  index.html  styles.css
